<resources>
    <string name="app_name">DotNoteAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="title">DotNote</string>
    <string name="title_activity_bill">DotNote</string>
    <string name="title_activity_person">个人中心</string>
    <string name="title_activity_statistics">统计</string>
    <string name="title_activity_share">分享</string>
    <string name="title_activity_bill_info">账单详情</string>
    <!-- 账单页面 -->
    <string name="txtAddBill_Money">金额</string>
    <string name="txtAddBill_Describe">备注</string>
    <string name="txtAddBill_CreateTime">创建时间</string>
    <string name="txtAddBill_Tag">标签</string>
    <string name="txtAddBill_title">添加账单</string>
    <string name="txtAddBill_hint_decribe">这里是牛逼的备注</string>
    <string name="txtAddBill_submit">完成添加</string>
    <!-- Strings related to Settings -->

    <!-- 账单详情页面-->
    <string name="bill_info_textview_money">金额:</string>
    <string name="bill_info_textview_describe">备注:</string>
    <string name="bill_info_textview_createtime">创建时间:</string>
    <string name="bill_info_textview_tag">标签类别:</string>
    <!-- 添加标签页面-->
    <string name="add_tag_tagname">标签名称</string>
    <string name="add_tag_describe">标签备注</string>
    <string name="add_tag_tagname_hint">请输入不超过4个字的名称</string>
    <string name="add_tag_describe_hint">请输入不超过16个字的备注</string>

    <!-- Image Font -->
    <string name="awesome_plus">\uf067</string>
    <string name="awesome_user">\uf007</string>
    <string name="awesome_cloud">\uf0c2</string>
    <string name="awesome_tags">\uf02c</string>
    <string name="awesome_minus">\uf068</string>
    <string name="awesome_edit">\uf044</string>
    <string name="awesome_chart">\uf080</string>
    <string name="awesome_inbox">\uf01c</string>
    <string name="awesome_group">\uf0c0</string>
    <string name="awesome_tag_medical">\uf0f9</string>
    <string name="awesome_tag_shopping">\uf07a</string>
    <string name="awesome_tag_traffic">\uf072</string>
    <string name="awesome_tag_coffee">\uf0f4</string>
    <string name="awesome_tag_book">\uf02d</string>
    <string name="awesome_tag_phone">\uf10b</string>
    <string name="awesome_tag_film">\uf008</string>
    <string name="awesome_tag_bar">\uf000</string>
    <string name="awesome_tag_showAll">\uf063</string>

    <!-- Nav -->
    <string name="nav_awesome_back">\uf104 返回</string>

    <!-- Person -->
    <string name="person_text_username">用户名</string>
    <string name="person_text_mac">MAC</string>

    <!-- Sharing-->
    <string name="sharing_button_inport">导入</string>
    <string name="sharing_button_export">导出</string>
    <string name="sharing_textview_chooseFile_hint">请选择需要导入的文件</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
