<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"

    >

    <include layout="@layout/menu_share" />

    <com.zhzane.android.dotnoteandroid.component.awesome.AwesomeTextView
        android:id="@+id/sharing_textview_chooseFile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin_padding10"
        android:layout_marginRight="@dimen/margin_padding10"
        android:paddingLeft="@dimen/margin_padding10"
        android:hint="@string/sharing_textview_chooseFile_hint"
        android:editable="false"
        android:singleLine="true"
        android:background="@drawable/rounded_editext"
        android:textSize="@dimen/font_size20"
        />
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.zhzane.android.dotnoteandroid.component.awesome.AwesomeButton
                android:id="@+id/sharing_button_inport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/sharing_button_inport"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_size18" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.zhzane.android.dotnoteandroid.component.awesome.AwesomeButton
                android:id="@+id/sharing_button_exprot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/sharing_button_export"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_size18" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>